--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ main {
 
 hr {
 	border: none;
-	border-top: 2px solid #ffffff85;
+	border-top: 1px solid #ffffff85;
 	margin: 0;
 	margin-top: 25px;
 	height: 25px;
@@ -81,6 +81,45 @@ br {
 	margin: 10px 5px;
 }
 
+button {
+	margin: 8px;
+	padding: 8px;
+	border-radius: 8px;
+	border: none;
+	background-color: #00000060;
+	color: inherit;
+	font-family: inherit;
+	font-size: inherit;
+	box-shadow: #000000be 0 5px 4px;
+	transition: transform 0.025s ease-out, box-shadow 0.025s ease-out, text-shadow 0.05s ease-out, font-weight 0.05s ease-out;
+}
+
+button:hover {
+	cursor: pointer;
+}
+
+button:active {
+	transform: translateY(5px);
+	box-shadow: #000000be 0 0px 6px;
+}
+
+button.no-decoration {
+	background-color: transparent;
+	border: none;
+	color: inherit;
+	font-size: inherit;
+	font-weight: inherit;
+	cursor: pointer;
+	box-shadow: none;
+	padding: 0px;
+	margin: 0px;
+}
+
+button.no-decoration:active {
+	transform: scale(0.85);
+	box-shadow: none;
+}
+
 input.input-but-output {
 	background-color: transparent;
 	border: none;
@@ -96,6 +135,51 @@ input {
 	font-size: inherit;
 	font-family: inherit;
 	padding: 5px;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+	appearance: none;
+}
+
+input[type="number"] {
+	appearance: textfield;
+}
+
+input[type="range"] {
+	margin: 0 15px;
+	padding: 0;
+	appearance: none;
+	background: linear-gradient(#444, #353535);
+	height: 12px;
+	width: 200px;
+	border-radius: 10px;
+	border: none;
+	outline: none;
+}
+
+input[type="range"]::-webkit-slider-thumb,
+input[type="range"]::-moz-range-thumb {
+	appearance: none;
+	width: 18px;
+	height: 18px;
+	background-color: #1e80ff;
+	border-radius: 50%;
+	outline: none;
+	border: none;
+}
+
+input[type="checkbox"] {
+	appearance: none;
+	width: 16px;
+	height: 16px;
+	border-radius: 5px;
+	border: 1px solid #ffffff7a;
+}
+
+input[type="checkbox"]:checked {
+	border: 1px solid #1e80ff;
+	background-color: #1e80ff;
 }
 
 li {
@@ -154,6 +238,31 @@ h1 {
 .side-by-side {
 	display: inline-flex;
 	align-items: center;
+}
+
+.multiple-control {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 15px 0;
+}
+
+.multiple-control>p {
+	margin: 0;
+}
+
+.panel {
+	background-color: #00000046;
+	backdrop-filter: blur(20px);
+	margin: 20px;
+	padding: 20px;
+	border-top: 1px solid #ffffff7a;
+	border-radius: 16px;
+	box-shadow: #00000063 0 8px 4px;
+}
+
+svg.panel {
+	padding: 0px;
 }
 
 h1 {
